--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,11 @@
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "src/tsconfig.app.json",
 						"assets": [
-							"src/favicon.ico",
-							"src/assets"
+							{
+								"glob": "**/*",
+								"input": "src/assets/",
+								"output": "/"
+							}
 						],
 						"styles": [
 							"src/styles.scss"
