--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -5,6 +5,50 @@
 	"description": "En receptsammling med länkar och egenskrivna recept",
 	"dir": "ltr",
 	"display": "standalone",
+	"icons": [
+		{
+			"purpose": "maskable",
+			"sizes": "256x256",
+			"src": "/logos/logo_256.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "128x128",
+			"src": "/logos/logo_128.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "96x96",
+			"src": "/logos/logo_96.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "72x72",
+			"src": "/logos/logo_72.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "48x48",
+			"src": "/logos/logo_48.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "badge",
+			"sizes": "32x32",
+			"src": "/logos/logo_32.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "badge",
+			"sizes": "16x16",
+			"src": "/logos/logo_16.png",
+			"type": "image/png"
+		}
+	],
 	"lang": "sv",
 	"name": "Kobkok",
 	"orientation": "any",
