--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# Editor configuration, see http://editorconfig.org
+# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
@@ -7,6 +7,9 @@ indent_style = tabs
 indent_size = 4
 insert_final_newline = false
 trim_trailing_whitespace = true
+
+[*.ts]
+quote_type = double
 
 [*.md]
 max_line_length = off
