--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
 			"prefix": "bok",
 			"schematics": {
 				"@schematics/angular:component": {
-					"styleext": "scss"
+					"style": "scss"
 				}
 			},
 			"architect": {
@@ -21,7 +21,8 @@
 						"index": "src/index.html",
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
-						"tsConfig": "src/tsconfig.app.json",
+						"tsConfig": "tsconfig.app.json",
+						"aot": true,
 						"assets": [
 							{
 								"glob": "**/*",
@@ -47,10 +48,21 @@
 							"sourceMap": false,
 							"extractCss": true,
 							"namedChunks": false,
-							"aot": true,
 							"extractLicenses": true,
 							"vendorChunk": false,
-							"buildOptimizer": true
+							"buildOptimizer": true,
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "2mb",
+									"maximumError": "5mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "6kb",
+									"maximumError": "10kb"
+								}
+							]
 						}
 					}
 				},
@@ -76,36 +88,31 @@
 					"options": {
 						"main": "src/test.ts",
 						"polyfills": "src/polyfills.ts",
-						"tsConfig": "src/tsconfig.spec.json",
-						"karmaConfig": "src/karma.conf.js",
-						"styles": [
-							"src/styles.scss"
-						],
-						"scripts": [],
+						"tsConfig": "tsconfig.spec.json",
+						"karmaConfig": "karma.conf.js",
 						"assets": [
 							"src/favicon.ico",
 							"src/assets"
-						]
+						],
+						"styles": [
+							"src/styles.scss"
+						],
+						"scripts": []
 					}
 				},
 				"lint": {
 					"builder": "@angular-devkit/build-angular:tslint",
 					"options": {
 						"tsConfig": [
-							"src/tsconfig.app.json",
-							"src/tsconfig.spec.json"
+							"tsconfig.app.json",
+							"tsconfig.spec.json",
+							"e2e/tsconfig.json"
 						],
 						"exclude": [
 							"**/node_modules/**"
 						]
 					}
-				}
-			}
-		},
-		"kokbok-e2e": {
-			"root": "e2e/",
-			"projectType": "application",
-			"architect": {
+				},
 				"e2e": {
 					"builder": "@angular-devkit/build-angular:protractor",
 					"options": {
@@ -117,18 +124,8 @@
 							"devServerTarget": "kokbok:serve:production"
 						}
 					}
-				},
-				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
-					"options": {
-						"tsConfig": "e2e/tsconfig.e2e.json",
-						"exclude": [
-							"**/node_modules/**"
-						]
-					}
 				}
 			}
-		}
-	},
+		}},
 	"defaultProject": "kokbok"
 }
